--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "./dist/quill-resize-image.js",
   "typings": "types/main.d.ts",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [
     "quill",
     "quill editor",
